--- a/index.html
+++ b/index.html
@@ -4,73 +4,104 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Digital clock :)</title>
+    <title>note app</title>
   </head>
-  <body>
-    <script>
-      function displayTime() {
-        var dateTime = new Date();
-        var hrs = dateTime.getHours();
-        var min = dateTime.getMinutes();
-        var sec = dateTime.getSeconds();
-        var session = document.getElementById("session");
+  <style>
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+    }
 
-        if (hrs > 12) {
-          session.innerHTML = "PM";
-        } else {
-          session.innerHTML = "AM";
-        }
+    .notes {
+      display: flex;
+      height: 100%;
+    }
 
-        if (hrs > 12) {
-          hrs = hrs - 12;
-        }
+    .notes * {
+      font-family: sans-serif;
+    }
 
-        if (hrs < 10) {
-          hrs = "0" + hrs;
-        }
+    .notes__sidebar {
+      border-right: 2px solid #dddddd;
+      flex-shrink: 0;
+      overflow-y: auto;
+      padding: 1em;
+      width: 300px;
+    }
 
-        if (sec < 10) {
-          sec = "0" + sec;
-        }
+    .notes__add {
+      background: #009578;
+      border: none;
+      border-radius: 7px;
+      color: #ffffff;
+      cursor: pointer;
+      font-size: 1.25em;
+      font-weight: bold;
+      margin-bottom: 1em;
+      padding: 0.75em 0;
+      width: 100%;
+    }
 
-        if (min < 10) {
-          min = "0" + min;
-        }
+    .notes__add:hover {
+      background: #00af8c;
+    }
 
-        //hrs = (hrs < 10) ? "0" = hrs : hrs;
-        //min = (hrs < 10) ? "0" = min : min;
-        //sec = (sec < 10) ? "0" = sec : sec;
+    .notes__list-item {
+      cursor: pointer;
+    }
 
-        document.getElementById("hours").innerHTML = hrs;
-        document.getElementById("minutes").innerHTML = min;
-        document.getElementById("seconds").innerHTML = sec;
-      }
-      setInterval(displayTime, 10);
-    </script>
-    <style>
-      body {
-        margin: 0%;
-        padding: 0%;
-        background-color: black;
-      }
-      #container {
-        font-family: Arial, Helvetica, sans-serif;
-        color: #fff;
-        font-weight: bold;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 70px;
-      }
-    </style>
-    <div id="container">
-      <span id="hours">00</span>
-      <span>:</span>
-      <span id="minutes">00</span>
-      <span>:</span>
-      <span id="seconds">00</span>
-      <span id="session">AM</span>
-    </div>
-  </body>
+    .notes__list-item--selected {
+      background: #eeeeee;
+      border-radius: 7px;
+      font-weight: bold;
+    }
+
+    .notes__small-title,
+    .notes__small-updated {
+      padding: 10px;
+    }
+
+    .notes__small-title {
+      font-size: 1.2em;
+    }
+
+    .notes__small-body {
+      padding: 0 10px;
+    }
+
+    .notes__small-updated {
+      color: #aaaaaa;
+      font-style: italic;
+      text-align: right;
+    }
+
+    .notes__preview {
+      display: flex;
+      flex-direction: column;
+      padding: 2em 3em;
+      flex-grow: 1;
+    }
+
+    .notes__title,
+    .notes__body {
+      border: none;
+      outline: none;
+      width: 100%;
+    }
+
+    .notes__title {
+      font-size: 3em;
+      font-weight: bold;
+    }
+
+    .notes__body {
+      flex-grow: 1;
+      font-size: 1.2em;
+      line-height: 1.5;
+      margin-top: 2em;
+      resize: none;
+    }
+  </style>
+  <body></body>
 </html>
