--- a/index.html
+++ b/index.html
@@ -7,158 +7,46 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="game">
-      <div id="character"></div>
-    </div>
-    <style>
-      * {
-        padding: 0;
+    <div class="circle"></div>
+    <p>X: <span id="x-value"></span></p>
+    <p>Y: <span id="y-value"></span></p>
+    <script defer>
+      //circle.style.left = parseInt(circle.style.left) + yValue + "px"; in case needed use this.
+      let circle = document.querySelector(".circle");
+
+      window.addEventListener("load", () => {
+        circle.style.position = "absolute";
+        circle.style.left = 0;
+        circle.style.top = 0;
+      });
+
+      window.addEventListener("mousemove", function (e) {
+        let yValue = (document.getElementById("x-value").textContent = e.x);
+        let xValue = (document.getElementById("y-value").textContent = e.y);
+
+        circle.style.top = xValue + "px";
+        circle.style.left = yValue + "px";
+      });
+
+      // document.getElementById("randomNumber").innerHTML = index + "px";
+    </script>
+    <style defer>
+      .circle {
+        justify-content: 0;
         margin: 0;
-      }
-      #game {
-        width: 400px;
-        height: 500px;
-        border: 1px solid black;
-        margin: auto;
-      }
-      #character {
-        width: 20px;
-        height: 20px;
-        background-color: red;
-        border-radius: 50%;
+        padding: 0;
+        height: 100px;
+        width: 100px;
+        background-color: #111;
         position: relative;
-        top: 440px;
-        left: 190px;
-        z-index: 10000000;
+        left: 100px;
+        align-items: center;
       }
-      .block {
-        width: 400px;
-        height: 20px;
-        background-color: black;
+
+      .randomNumber {
         position: relative;
-        top: 100px;
-        margin-top: -20px;
-      }
-      .hole {
-        width: 40px;
-        height: 20px;
-        background-color: white;
-        position: relative;
-        top: 100px;
-        margin-top: -20px;
+        top: 200px;
       }
     </style>
-    <script>
-      var character = document.getElementById("character");
-      var game = document.getElementById("game");
-      var interval;
-      var both = 0;
-      var counter = 0;
-      var currentBlocks = [];
-
-      function moveLeft() {
-        var left = parseInt(
-          window.getComputedStyle(character).getPropertyValue("left")
-        );
-        if (left > 0) {
-          character.style.left = left - 2 + "px";
-        }
-      }
-      function moveRight() {
-        var left = parseInt(
-          window.getComputedStyle(character).getPropertyValue("left")
-        );
-        if (left < 380) {
-          character.style.left = left + 2 + "px";
-        }
-      }
-      document.addEventListener("keydown", (event) => {
-        if (both == 0) {
-          both++;
-          if (event.key === "ArrowLeft") {
-            interval = setInterval(moveLeft, 1);
-          }
-          if (event.key === "ArrowRight") {
-            interval = setInterval(moveRight, 1);
-          }
-        }
-      });
-      document.addEventListener("keyup", (event) => {
-        clearInterval(interval);
-        both = 0;
-      });
-
-      var blocks = setInterval(function () {
-        var blockLast = document.getElementById("block" + (counter - 1));
-        var holeLast = document.getElementById("hole" + (counter - 1));
-        if (counter > 0) {
-          var blockLastTop = parseInt(
-            window.getComputedStyle(blockLast).getPropertyValue("top")
-          );
-          var holeLastTop = parseInt(
-            window.getComputedStyle(holeLast).getPropertyValue("top")
-          );
-        }
-        if (blockLastTop < 400 || counter == 0) {
-          var block = document.createElement("div");
-          var hole = document.createElement("div");
-          block.setAttribute("class", "block");
-          hole.setAttribute("class", "hole");
-          block.setAttribute("id", "block" + counter);
-          hole.setAttribute("id", "hole" + counter);
-          block.style.top = blockLastTop + 100 + "px";
-          hole.style.top = holeLastTop + 100 + "px";
-          var random = Math.floor(Math.random() * 360);
-          hole.style.left = random + "px";
-          game.appendChild(block);
-          game.appendChild(hole);
-          currentBlocks.push(counter);
-          counter++;
-        }
-        var characterTop = parseInt(
-          window.getComputedStyle(character).getPropertyValue("top")
-        );
-        var characterLeft = parseInt(
-          window.getComputedStyle(character).getPropertyValue("left")
-        );
-        var drop = 0;
-        if (characterTop <= 0) {
-          alert("Game over. Score: " + (counter - 9));
-          clearInterval(blocks);
-          location.reload();
-        }
-        for (var i = 0; i < currentBlocks.length; i++) {
-          let current = currentBlocks[i];
-          let iblock = document.getElementById("block" + current);
-          let ihole = document.getElementById("hole" + current);
-          let iblockTop = parseFloat(
-            window.getComputedStyle(iblock).getPropertyValue("top")
-          );
-          let iholeLeft = parseFloat(
-            window.getComputedStyle(ihole).getPropertyValue("left")
-          );
-          iblock.style.top = iblockTop - 0.5 + "px";
-          ihole.style.top = iblockTop - 0.5 + "px";
-          if (iblockTop < -20) {
-            currentBlocks.shift();
-            iblock.remove();
-            ihole.remove();
-          }
-          if (iblockTop - 20 < characterTop && iblockTop > characterTop) {
-            drop++;
-            if (iholeLeft <= characterLeft && iholeLeft + 20 >= characterLeft) {
-              drop = 0;
-            }
-          }
-        }
-        if (drop == 0) {
-          if (characterTop < 480) {
-            character.style.top = characterTop + 2 + "px";
-          }
-        } else {
-          character.style.top = characterTop - 0.5 + "px";
-        }
-      }, 1);
-    </script>
   </body>
 </html>
