--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
         circle.style.top = 0;
       });
 
-      window.addEventListener("mousemove", function (e) {
+      window.addEventListener("mousedown", function (e) {
         let yValue = (document.getElementById("x-value").textContent = e.x);
         let xValue = (document.getElementById("y-value").textContent = e.y);
+        function moveRandomly() {
+          let moveBy = Math.floor(Math.random * 100);
+          circle.style.left = moveBy + "px";
+          console.log(moveBy);
+        }
 
+        setInterval(moveRandomly, 1000);
         circle.style.top = xValue + -50 + "px";
         circle.style.left = yValue + -50 + "px";
       });
