--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="circle"></div>
-    <p>X: <span id="x-value"></span></p>
-    <p>Y: <span id="y-value"></span></p>
+    <div class="food"></div>
+
     <script defer>
       let circle = document.querySelector(".circle");
       let moveBy = 10;
@@ -38,16 +38,32 @@
       });
     </script>
     <style defer>
+      body {
+        background-color: lightgreen;
+      }
+
       .circle {
         justify-content: 0;
         margin: 0;
         padding: 0;
         height: 100px;
         width: 100px;
-        background-color: #111;
+        background-color: #333;
         position: relative;
         left: 100px;
         align-items: center;
+      }
+      .food {
+        width: 10px;
+        height: 10px;
+        background-color: yellow;
+      }
+
+      * {
+        max-width: 2560;
+        max-height: 1080;
+        min-width: 800;
+        min-height: 600;
       }
     </style>
   </body>
