--- a/index.html
+++ b/index.html
@@ -7,36 +7,12 @@
     <title>Document</title>
   </head>
   <body>
+    <h3 class="foodCounter">food:</h3>
+    <h3 class="waterCounter">water:</h3>
     <div class="circle"></div>
     <div class="food"></div>
 
-    <script defer>
-      let circle = document.querySelector(".circle");
-      let moveBy = 10;
-
-      window.addEventListener("load", () => {
-        circle.style.position = "absolute";
-        circle.style.left = 0;
-        circle.style.top = 0;
-      });
-
-      window.addEventListener("keydown", (e) => {
-        switch (e.key) {
-          case "ArrowLeft":
-            circle.style.left = parseInt(circle.style.left) - moveBy + "px";
-            break;
-          case "ArrowRight":
-            circle.style.left = parseInt(circle.style.left) + moveBy + "px";
-            break;
-          case "ArrowUp":
-            circle.style.top = parseInt(circle.style.top) - moveBy + "px";
-            break;
-          case "ArrowDown":
-            circle.style.top = parseInt(circle.style.top) + moveBy + "px";
-            break;
-        }
-      });
-    </script>
+    <script src="javaScript/main.js" defer></script>
     <style defer>
       body {
         background-color: lightgreen;
