--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript Game</title>
   </head>
-  <body>
+  <body background="images/grass.png">
     <h3 class="foodCounter">food:</h3>
     <h3 class="waterCounter">water:</h3>
     <div class="circle"></div>
@@ -15,7 +15,7 @@
     <script src="javaScript/main.js" defer></script>
     <style defer>
       body {
-        background-color: lightgreen;
+        
       }
 
       .circle {
