added food/water counter

--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <title>JavaScript Game</title>
   </head>
   <body background="images/grass.png">
-    <h3 class="foodCounter">food:</h3>
-    <h3 class="waterCounter">water:</h3>
+    <h3 id="foodCounter">food:</h3>
+    <h3 id="waterCounter">water:</h3>
     <div class="circle"></div>
     <div class="food"></div>
 
     <script src="javaScript/main.js" defer></script>
     <style defer>
       body {
-        
       }
 
       .circle {
