--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         width: 20px;
         height: 20px;
         background-color: yellow;
+        justify-content: 0;
+        margin: 0;
+        padding: 0;
+        position: relative;
+        align-items: center;
       }
 
       * {
