--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body background="images/grass.png">
     <h3 id="foodCounter">food:</h3>
     <h3 id="waterCounter">water:</h3>
-    <div class="circle"></div>
+    <div class="player"></div>
     <div class="food"></div>
 
     <script src="javaScript/main.js" defer></script>
     <style defer>
-      .circle {
+      .player {
         justify-content: 0;
         margin: 0;
         padding: 0;
