--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>JavaScript Game</title>
   </head>
   <body background="images/grass.png">
-    <h3 id="foodCounter">food:</h3>
-    <h3 id="waterCounter">water:</h3>
+    <h3 id="yCounter">Y:</h3>
+    <h3 id="xCounter">X:</h3>
+    <h3 id="foodCounter">Food:</h3>
+    <h3 id="waterCounter">Water:</h3>
     <div class="player"></div>
     <div class="food"></div>
 
