--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,8 +21,8 @@
         justify-content: 0;
         margin: 0;
         padding: 0;
-        height: 20px;
-        width: 20px;
+        height: 100px;
+        width: 100px;
         background-color: #333;
         position: relative;
         left: 100px;
