--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h3 id="waterCounter">Water:</h3>
     <div class="player"></div>
     <div class="food"></div>
+    <div class="menu"></div>
 
     <script src="javaScript/main.js" defer></script>
     <style defer>
@@ -24,7 +25,7 @@
         height: 100px;
         width: 100px;
         background-color: #333;
-        position: relative;
+        position: absolute;
         left: 100px;
         align-items: center;
       }
@@ -32,7 +33,7 @@
         width: 20px;
         height: 20px;
         background-color: yellow;
-        position: relative;
+        position: absolute;
       }
 
       * {
