--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3 id="xCounter">X:</h3>
     <h3 id="foodCounter">Food:</h3>
     <h3 id="waterCounter">Water:</h3>
+    <h3 class="hints"></h3>
     <div class="player"></div>
     <div class="food"></div>
     <div class="menu"></div>
