--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="player"></div>
     <div class="food"></div>
     <div class="menu"></div>
+    <a href="/main.html">Go Home</a>
 
     <script src="javaScript/main.js" defer></script>
     <style defer>
