--- a/index.html
+++ b/index.html
@@ -1,49 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript Game</title>
+    <title>Home</title>
   </head>
-  <body background="images/grass.png">
-    <h3 id="yCounter">Y:</h3>
-    <h3 id="xCounter">X:</h3>
-    <h3 id="foodCounter">Food:</h3>
-    <h3 id="waterCounter">Water:</h3>
-    <h3 class="hints"></h3>
-    <div class="player"></div>
-    <div class="food"></div>
-    <div class="menu"></div>
-    <a href="/main.html">Go Home</a>
-
-    <script src="javaScript/main.js" defer></script>
-    <style defer>
-      .player {
-        justify-content: 0;
-        margin: 0;
-        padding: 0;
-        height: 100px;
-        width: 100px;
-        background-color: #333;
-        position: absolute;
-        left: 100px;
-        align-items: center;
-      }
-      .food {
-        width: 20px;
-        height: 20px;
-        background-color: yellow;
-        position: absolute;
-      }
-
-      * {
-        max-width: 2560;
-        max-height: 1080;
-        min-width: 800;
-        min-height: 600;
-      }
-    </style>
+  <body>
+    <a href="/index.html">My game</a>
+    <script src="javaScript/mainPage.js"></script>
   </body>
 </html>
