fixed a small issue

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <div class="player"></div>
     <div class="food"></div>
     <div class="menu"></div>
-    <a href="/main.html">Go Home</a>
+    <a href="/index.html">Go Home</a>
 
     <script src="javaScript/main.js" defer></script>
     <style defer>
