--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Home</title>
   </head>
   <body>
-    <a href="/index.html">My game</a>
+    <div id="nav"></div>
+    <a href="/main.html">My game</a>
     <script src="javaScript/mainPage.js"></script>
   </body>
 </html>
