--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <div id="nav"></div>
-    <a href="/main.html">My game</a>
+    <div id="background">
+      <a id="game" href="/main.html">My game</a>
+    </div>
+
+    <link rel="stylesheet" href="index.css" />
     <script src="javaScript/mainPage.js"></script>
   </body>
 </html>
