--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="nav"></div>
     <div id="background">
       <a id="game" href="/main.html">My game</a>
+      <a href="/form.html" id="form" class="form">Form thing</a>
     </div>
 
     <link rel="stylesheet" href="index.css" />
