forgot something lol

--- a/form.html
+++ b/form.html
@@ -38,6 +38,7 @@
       </div>
       <button type="reset">Reset</button>
       <button type="submit">Submit</button>
+      <a href="/index.html">Go back</a>
     </form>
   </body>
 </html>
