--- a/formResults.html
+++ b/formResults.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Documendt</title>
+    <title>Form results</title>
   </head>
   <body>
     <div id="results">
-      <a href="/form.html">Back to Form</a>
+      <div>
+        <a href="/form.html">Back to Form</a>
+      </div>
       <script>
         const resultsList = document.getElementById("results");
         new URLSearchParams(window.location.search).forEach((value, name) => {
