--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="background">
       <a id="game" href="/main.html">My game</a>
       <a href="/form.html" id="form" class="form">Form thing</a>
+      <a href="/clickerGame.html" class="clicker">Clicker Game</a>
     </div>
 
     <link rel="stylesheet" href="index.css" />
