--- a/clickerGame.html
+++ b/clickerGame.html
@@ -4,15 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="clickerGame.js"></script>
-    <a href="/index.html">Go back</a>
-    <link rel="stylesheet" href="clickerGame.css" />
+    <title>Alarm Clock</title>
+    <link rel="stylesheet" href="Alarm.css" />
+    <a href="Alarm.js"></a>
   </head>
   <body>
-    <div class="thing">
-      <h1 class="score" id="score">0</h1>
-      <button class="pizzaButton" onclick="bob()">Pizza</button>
+    <div class="wrapper">
+      <img class="Alarm-Clock" src="images/clock.ng" alt="Alarm Clock" />
+      <h1>04:20:30 PM</h1>
+      <div class="content">
+        <div class="column">
+          <select>
+            <option value="Hour" selected hidden>Hour</option>
+          </select>
+        </div>
+        <div class="column">
+          <select>
+            <option value="Minute" selected hidden>Minute</option>
+          </select>
+        </div>
+        <div class="column">
+          <select>
+            <option value="Second" selected hidden>Second</option>
+          </select>
+        </div>
+        <div class="column">
+          <select>
+            <option value="AM/PM" selected hidden>AM/PM</option>
+          </select>
+        </div>
+      </div>
+      <button>Set Alarm</button>
     </div>
   </body>
 </html>
