added Alarm Clock (Work In Progress)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <div id="nav"></div>
     <div id="background">
-      <a id="game" href="/main.html">My game</a>
+      <a id="game" href="/main.html">My game (In progress)</a>
       <a href="/form.html" id="form" class="form">Form thing</a>
-      <a href="/clickerGame.html" class="clicker">Clicker Game</a>
+      <a href="/Alarm.html" class="clicker">Alarm (In progress)</a>
     </div>
 
     <link rel="stylesheet" href="index.css" />
