--- a/Alarm.html
+++ b/Alarm.html
@@ -10,27 +10,23 @@
   </head>
   <body>
     <div class="wrapper">
-      <img class="Alarm-Clock" src="images/clock.ng" alt="Alarm Clock" />
-      <h1>04:20:30 PM</h1>
+      <img src="images/clock.svg" alt="clock" />
+      <a href="/index.html">Go Back</a>
+      <h1>00:00:00 PM</h1>
       <div class="content">
         <div class="column">
           <select>
-            <option value="Hour" selected hidden>Hour</option>
+            <option value="Hour" selected disabled hidden>Hour</option>
           </select>
         </div>
         <div class="column">
           <select>
-            <option value="Minute" selected hidden>Minute</option>
+            <option value="Minute" selected disabled hidden>Minute</option>
           </select>
         </div>
         <div class="column">
           <select>
-            <option value="Second" selected hidden>Second</option>
-          </select>
-        </div>
-        <div class="column">
-          <select>
-            <option value="AM/PM" selected hidden>AM/PM</option>
+            <option value="AM/PM" selected disabled hidden>AM/PM</option>
           </select>
         </div>
       </div>
