--- a/html/form.html
+++ b/html/form.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="images/FormsFavicon.png" />
   </head>
   <body>
-    <link rel="stylesheet" href="form.css" />
+    <link rel="stylesheet" href="/css/form.css" />
     <div class="thing">
       <form action="formResults.html" method="GET">
         <div>
@@ -37,7 +37,7 @@
         </div>
         <button type="reset">Reset</button>
         <button type="submit">Submit</button>
-        <a href="/index.html">Go back</a>
+        <a href="/html/form.html">Go back</a>
       </form>
     </div>
   </body>
