--- a/html/formResults.html
+++ b/html/formResults.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form results</title>
     <link rel="icon" type="image/x-icon" href="images/FormsFavicon.png" />
-    <link rel="stylesheet" href="formResults.css" />
+    <link rel="stylesheet" href="/css/formResults.css" />
   </head>
   <body>
     <div id="results">
       <div>
-        <a href="/form.html">Back to Form</a>
+        <a href="/html/formResults.html">Back to Form</a>
       </div>
       <script>
         const resultsList = document.getElementById("results");
