--- a/html/randomPassword.html
+++ b/html/randomPassword.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="randomPassword.js"></script>
-    <link rel="stylesheet" href="randomPassword.css" />
+    <script src="/html/randomPassword.html"></script>
+    <link rel="stylesheet" href="/html/randomPassword.css" />
   </head>
   <body>
     <h1>Random Password Generator</h1>
