--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="nav"></div>
     <div id="background">
-      <a id="game" href="/main.html">My game (In progress)</a>
+      <a id="game" href="/html/main.html">My game (In progress)</a>
       <a href="/html/form.html" id="form" class="form">Form thing</a>
       <a href="/html/Alarm.html" class="clicker">Alarm (In progress)</a>
       <a href="/html/randomPassword.html" class="password"
