--- a/html/Alarm.html
+++ b/html/Alarm.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alarm Clock</title>
     <link rel="stylesheet" href="/css/Alarm.css" />
-    <a href="Alarm.js"></a>
+    <script src="/javaScript/Alarm.js"></script>
   </head>
   <body>
     <div class="wrapper">
