--- a/html/form.html
+++ b/html/form.html
@@ -37,7 +37,7 @@
         </div>
         <button type="reset">Reset</button>
         <button type="submit">Submit</button>
-        <a href="/html/index.html">Go back</a>
+        <a href="/html/form.html">Go back</a>
       </form>
     </div>
   </body>
