Revert "fixed deadly issue"
This reverts commit 91684529dd72fa9a3ffd5df0d5287894ac07d3ae.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
     <div id="nav"></div>
     <div id="background">
       <a id="game" href="/main.html">My game (In progress)</a>
-      <a href="/html/form.html" id="form" class="form">Form thing</a>
-      <a href="/html/Alarm.html" class="clicker">Alarm (In progress)</a>
-      <a href="/html/randomPassword.html" class="password"
-        >random password generator (In progress)</a
-      >
+      <a href="/form.html" id="form" class="form">Form thing</a>
+      <a href="/Alarm.html" class="clicker">Alarm (In progress)</a>
     </div>
 
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="index.css" />
     <script src="javaScript/mainPage.js"></script>
   </body>
 </html>
