--- a/Alarm.html
+++ b/Alarm.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alarm Clock</title>
-    <link rel="stylesheet" href="/css/Alarm.css" />
-    <script src="/javaScript/Alarm.js"></script>
+    <link rel="stylesheet" href="/Alarm.css" />
+    <script src="/Alarm.js"></script>
   </head>
   <body>
     <div class="wrapper">
       <img src="images/clock.svg" alt="clock" />
-      <a href="/html/index.html">Go Back</a>
+      <a href="/index.html">Go Back</a>
       <h1>00:00:00 PM</h1>
       <div class="content">
         <div class="column">
