--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <body>
     <div id="nav"></div>
     <div id="background">
-      <a id="game" href="/html/main.html">My game (In progress)</a>
-      <a href="/html/form.html" id="form" class="form">Form thing</a>
-      <a href="/html/Alarm.html" class="clicker">Alarm (In progress)</a>
-      <a href="/html/randomPassword.html" class="password"
+      <a id="game" href="/main.html">My game (In progress)</a>
+      <a href="/form.html" id="form" class="form">Form thing</a>
+      <a href="/Alarm.html" class="clicker">Alarm (In progress)</a>
+      <a href="/randomPassword.html" class="password"
         >random password generator (In progress)</a
       >
     </div>
 
-    <link rel="stylesheet" href="/css/index.css" />
-    <script src="javaScript/mainPage.js"></script>
+    <link rel="stylesheet" href="/index.css" />
+    <script src="/mainPage.js"></script>
   </body>
 </html>
