--- a/main.html
+++ b/main.html
@@ -16,9 +16,9 @@
     <div class="player"></div>
     <div class="food"></div>
     <div class="menu"></div>
-    <a href="/html/index.html">Go Back</a>
+    <a href="/index.html">Go Back</a>
 
-    <script src="javaScript/main.js" defer></script>
+    <script src="/main.js" defer></script>
     <style defer>
       .player {
         justify-content: 0;
