I keep updating it every small change

--- a/randomPassword.html
+++ b/randomPassword.html
@@ -12,5 +12,6 @@
     <h1>Random Password Generator</h1>
     <h1 id="password">thisIsThePassword</h1>
     <button onclick="randomize()">Randomize</button>
+    <a href="/index.html">Go back</a>
   </body>
 </html>
