--- a/randomPassword.html
+++ b/randomPassword.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="/randomPassword.css" />
   </head>
   <body>
-    <h1>Random Password Generator</h1>
-    <h1 id="password">thisIsThePassword</h1>
-    <button onclick="randomize()">Randomize</button>
-    <a href="/index.html">Go back</a>
+    <div class="wrapper">
+      <h1>Random Password Generator</h1>
+      <h1 id="password">thisIsThePassword</h1>
+      <button onclick="randomize()">Randomize</button>
+      <a href="/index.html">Go back</a>
+    </div>
   </body>
 </html>
