you get the point

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <title>Home</title>
   </head>
   <body>
-    <div id="nav"></div>
     <div id="background">
+      <h1>Random Projects</h1>
       <a id="game" href="/main.html">My game (In progress)</a>
       <a href="/form.html" id="form" class="form">Form thing</a>
       <a href="/Alarm.html" class="clicker">Alarm (In progress)</a>
       <a href="/randomPassword.html" class="password"
         >random password generator (In progress)</a
       >
+    </div>
+    <div class="wrapper">
+      <a href="/aboutPage.html">About</a>
     </div>
 
     <link rel="stylesheet" href="/index.css" />
