--- a/formResults.html
+++ b/formResults.html
@@ -11,7 +11,7 @@
   <body>
     <div id="results">
       <div>
-        <a href="/formResults.html">Back to Form</a>
+        <a href="/form.html">Back to Form</a>
       </div>
       <script>
         const resultsList = document.getElementById("results");
