--- a/randomPassword.html
+++ b/randomPassword.html
@@ -13,6 +13,8 @@
       <h1>Random Password Generator</h1>
       <h1 id="password">thisIsThePassword</h1>
       <button onclick="randomize()">Randomize</button>
+      <button onclick="randomize2()">Randomize2</button>
+      <button onclick="Info()">Info</button>
       <a href="/index.html">Go back</a>
     </div>
   </body>
