TINY ISSUE NEEDED TO BE

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -9,8 +9,9 @@
   <body>
     <h1>This website is for testing and just random junk I make.</h1>
     <h2>
-      I use this to practice making a website and for practice in CSS, HTML and
+      I use this to practice making a website and for practice in CSS, HTML, and
       javaScript.
     </h2>
+    <a href="/index.html">Go back</a>
   </body>
 </html>
