--- a/randomPassword.html
+++ b/randomPassword.html
@@ -12,8 +12,8 @@
     <div class="wrapper">
       <h1>Random Password Generator</h1>
       <h1 id="password">thisIsThePassword</h1>
-      <button onclick="randomize()">Randomize</button>
-      <button onclick="randomize2()">Randomize2</button>
+      <button id="button" onclick="randomize()">Randomize</button>
+      <button id="button2" onclick="randomize2()">Randomize2</button>
       <button onclick="Info()">Info</button>
       <a href="/index.html">Go back</a>
     </div>
