--- a/randomPassword.html
+++ b/randomPassword.html
@@ -17,5 +17,6 @@
       <button onclick="Info()">Info</button>
       <a href="/index.html">Go back</a>
     </div>
+    <button onclick="doNotTouch()">DO NOT TOUCH</button>
   </body>
 </html>
