--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   </head>
   <body>
     <div id="background">
-      <h1>Random Projects</h1>
-      <a id="game" href="/main.html">My game (In progress)</a>
+      <h1>W.I.P Projects</h1>
+      <a id="game" href="/main.html">My game</a>
       <a href="/form.html" id="form" class="form">Form thing</a>
-      <a href="/Alarm.html" class="clicker">Alarm (In progress)</a>
+      <a href="/Alarm.html" class="clicker">Alarm</a>
       <a href="/randomPassword.html" class="password"
-        >random password generator (In progress)</a
+        >random password generator</a
       >
+      <h1 class="FinishedProjects">Finished Projects</h1>
+      <a class="sound" href="/soundBoard.html">Sound board</a>
     </div>
     <div class="wrapper">
       <a href="/aboutPage.html">About</a>
