--- a/index.html
+++ b/index.html
@@ -25,5 +25,13 @@
 
     <link rel="stylesheet" href="/index.css" />
     <script src="/mainPage.js"></script>
+    <div id="container">
+      <span id="hours">00</span>
+      <span>:</span>
+      <span id="minutes">00</span>
+      <span>:</span>
+      <span id="seconds">00</span>
+      <span id="session">AM</span>
+    </div>
   </body>
 </html>
