--- a/clickerGame.html
+++ b/clickerGame.html
@@ -11,9 +11,8 @@
     <div class="thing">
       <h1>Clicker Game</h1>
       <h1 id="score">Score: 0</h1>
-      <div onclick="scorePlus()" class="button" id="button">
-        <h3>Click Me</h3>
-      </div>
+      <div onclick="scorePlus()" class="button" id="button"></div>
+      <a href="/index.html">Go back</a>
     </div>
   </body>
   <script src="clickerGame.js"></script>
