--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="background">
       <h1>W.I.P Projects</h1>
       <a id="game" href="/main.html">My game</a>
+      <a id="clicker" href="/clickerGame.html">Clicker Game</a>
       <a href="/form.html" id="form" class="form">Form thing</a>
       <a href="/Alarm.html" class="clicker">Alarm</a>
       <a href="/randomPassword.html" class="password"
