--- a/clickerGame.html
+++ b/clickerGame.html
@@ -12,6 +12,7 @@
       <h1>Clicker Game</h1>
       <h1 id="score">Score: 0</h1>
       <div onclick="scorePlus()" class="button" id="button"></div>
+      <div onclick="updatecount()"" class="upgrade1"></div>
       <a href="/index.html">Go back</a>
     </div>
   </body>
