--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="background">
-      <h1>W.I.P Projects</h1>
+      <h1 class="wipProjects">W.I.P Projects</h1>
       <a id="game" href="/main.html">My game</a>
       <a id="clicker" href="/clickerGame.html">Clicker Game</a>
       <a href="/form.html" id="form" class="form">Form thing</a>
