--- a/test.html
+++ b/test.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test</title>
+    <title>Piano</title>
     <link rel="stylesheet" href="test.css" />
   </head>
   <body>
+    <div class="piano">
+      <div class="white-key" data-note="C"></div>
+      <div class="black-key" data-note="C#"></div>
+      <div class="white-key" data-note="D"></div>
+      <div class="black-key" data-note="D#"></div>
+      <div class="white-key" data-note="E"></div>
+      <div class="white-key" data-note="F"></div>
+      <div class="black-key" data-note="F#"></div>
+      <div class="white-key" data-note="G"></div>
+      <div class="black-key" data-note="G#"></div>
+      <div class="white-key" data-note="A"></div>
+      <div class="black-key" data-note="A#"></div>
+      <div class="white-key" data-note="B"></div>
+    </div>
+
     <script src="test.js"></script>
-    <canvas id="canvas" width="200" height="200"></canvas>
   </body>
 </html>
