--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a id="game" href="/main.html">My game</a>
       <a id="clicker" href="/clickerGame.html">Clicker Game</a>
       <a href="/form.html" id="form" class="form">Form thing</a>
-      <a id="stopMotion" href="stopMotion.html">Stop motion videos</a>
+      <a id="stopMotion" href="stopMotion.html">Clock</a>
       <a href="/Alarm.html" class="clicker">Alarm</a>
       <a href="/randomPassword.html" class="password"
         >random password generator</a
