--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <div id="background">
-      <h1 class="wipProjects">W.I.P Projects</h1>
-      <a id="game" href="/main.html">My game</a>
+      <h1 class="wipProjects" data-tooltip=" (Work.In.Progress)">
+        W.I.P Projects
+      </h1>
+      <a id="game" href="/main.html" data-tooltip="game">My game</a>
       <a id="clicker" href="/clickerGame.html">Clicker Game</a>
       <a href="/form.html" id="form" class="form">Form thing</a>
       <a id="stopMotion" href="stopMotion.html">Clock</a>
