--- a/dino.html
+++ b/dino.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="inkeddownload.png" alt="it no work :C" />
+    <img src="Inkeddownload.jpg" alt="it no work :C" />
   </body>
 </html>
